--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -35,7 +35,7 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-          <div class="row d-none d-md-block">
+          <div class="row d-none d-md-flex">
             {%- for image in product.images -%}
               <div class="col-md-3 mt-3">
                 <a href="{{ image | product_img_url: 'master' }}" target="_blank" data-target="#product-image-carousel" data-slide-to="{{ forloop.index0 }}">
