--- a/sections/featured-collections.liquid
+++ b/sections/featured-collections.liquid
@@ -30,6 +30,16 @@
   ]
 }
 {% endschema %}
+<ul>
+  {% for block in section.blocks %}
+    <!-- output block content -->
+    <li> block.id: {{  block.id }} </br>
+      block.settings: {{ block.settings }} </br>
+      block.shopify_attributes: {{ block.shopify_attributes }} </br>
+      block.type: {{ block.type }}</li></br>
+    Does this work?
+  {% endfor %}
+</ul>
 <div class="container bg-white my-5 text-center">
   <h2 class="mb-4">{{ section.settings.title | escape }}</h2>
   <div class="row justify-content-md-center">
@@ -40,3 +50,5 @@
     {%- endfor -%}
   </div>
 </div>
+
+
